[WTF] Compilation fails with system malloc https://bugs.webkit.org/show_bug.cgi?id=172445

Reviewed by Michael Catanzaro.

We are using the bmalloc even if the system malloc should be used.
Don't use bmalloc if the system malloc is requested and add the
missing implementation for computeRAMSize() on UNIX that's utilizing
the sysinfo() call.

* wtf/RAMSize.cpp:
(WTF::computeRAMSize):

Canonical link: https://commits.webkit.org/189393@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217270 268f45cc-cd09-0410-ab3c-d52691b4dbfc