Source/WTF/wtf/RAMSize.cpp
@@ -31,12 +31,16 @@
 
 #if OS(WINDOWS)
 #include <windows.h>
+#elif defined(USE_SYSTEM_MALLOC) && USE_SYSTEM_MALLOC
+#if OS(UNIX)
+#include <sys/sysinfo.h>
+#endif // OS(UNIX)
 #else
 #include <bmalloc/bmalloc.h>
 #endif
 
 namespace WTF {
-    
+
 #if OS(WINDOWS)
 static const size_t ramSizeGuess = 512 * MB;
 #endif
@@ -50,6 +54,14 @@ static size_t computeRAMSize()
     if (!result)
         return ramSizeGuess;
     return status.ullTotalPhys;
+#elif defined(USE_SYSTEM_MALLOC) && USE_SYSTEM_MALLOC
+#if OS(UNIX)
+    struct sysinfo si;
+    sysinfo(&si);
+    return si.totalram * si.mem_unit;
+#else
+#error "Missing a platform specific way of determining the available RAM"
+#endif // OS(UNIX)
 #else
     return bmalloc::api::availableMemory();
 #endif
